# fastapi-next

./: .gitignore
Note/: promt  readme.md
backend/: .env  .env.local  README.md  main.py  pyproject.toml
backend/app/api/: api_v1.py
backend/app/api/v1/: auth.py  dashbboard.py  genmini.py  upload.py  user.py  youtube.py
backend/app/core/: config.py  database.py  logger.py  supabase.py
backend/app/models/: user.py
backend/app/schemas/: auth.py  user.py
backend/app/services/: auth_service.py  genmini_service.py  upload_service.py  user_services.py  youtube_service.py
backend/migrations/: README  env.py
backend/migrations/versions/: 58132749d2f1_update_users_and_user_level_details_.py  8a4f6990b796_update_user_model.py  b9e35c57b360_initial_migration.py
docker/: docker-compose.yml
frontend/: README.md  components.json  local.env  package-lock.json  package.json
frontend/src/: middleware.ts
frontend/src/app/: layout.tsx  page.tsx  providers.tsx
frontend/src/app/api/auth/[...nextauth]/: route.ts
frontend/src/app/api/transcript/: route.ts
frontend/src/app/dashboard/: layout.tsx  page.tsx
frontend/src/app/dashboard/flashcards/: page.tsx  study-card.tsx
frontend/src/app/dashboard/flashcards/[id]/: flashcard.tsx  (+1 more)
frontend/src/app/dashboard/shadow/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/components/: app-sidebar.tsx  header-sidebar.tsx  login-form.tsx  nav-user.tsx  signup-form.tsx  stats-card.tsx
frontend/src/components/ui/: input.tsx  upload-avatar.tsx
frontend/src/hooks/: use-signup.ts
frontend/types/: next-auth.d.ts
